--- a/assets/privacy_policy.html
+++ b/assets/privacy_policy.html
@@ -180,7 +180,6 @@
     <div class="badges">
       <span class="badge">🔒 GDPR Aligned</span>
       <span class="badge">📱 Android App</span>
-      <span class="badge">📅 Effective Jan 1, 2025</span>
     </div>
   </div>
 </div>
@@ -310,13 +309,13 @@
     <p>We may update this policy as needed. Material changes will be notified via in-app notice and email to the registered admin at least 30 days before taking effect.</p>
   </div>
 
-  <!-- CONTACT -->
-  <div class="contact">
-    <h3>Contact Us</h3>
-    <p>Questions, concerns, or data requests? Reach our privacy team.</p>
-    <a href="mailto:privacy@edutrack.app">✉️ &nbsp;privacy@edutrack.app</a>
-  </div>
 
+  <!-- Developer Info -->
+  <div style="background:#fff;border:1px solid #E2E8F0;border-radius:16px;padding:20px 18px;margin-top:16px;text-align:center;">
+    <div style="font-size:11px;font-weight:700;color:#94A3B8;text-transform:uppercase;letter-spacing:0.8px;margin-bottom:10px;">Developed By</div>
+    <div style="font-size:17px;font-weight:800;color:#0F172A;margin-bottom:4px;">Shipman Production</div>
+    <a href="mailto:gregoreethomas@gmail.com" style="font-size:13px;color:#2563EB;font-weight:600;text-decoration:none;">✉️ &nbsp;gregoreethomas@gmail.com</a>
+  </div>
 </div>
 
 <div class="footer">
